# technion-utils

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conftest.py  group_theory.sty  gui.py  homework.sty  main.cpp  probability.sty  proof.sty  pusher.sh  requirements.txt  returnable.asm  scaler.py  settings.json  setup.py  symbols.sty
.devcontainer/: Dockerfile  devcontainer.json
234124/: CMakeLists.txt  README.md
234124/.github/workflows/: stage.yml
234124/tests/: CMakeLists.txt  conftest.py  settings.json
234124/tests/engine/: common.py  main.py  runner.py  utils.py
234124/tests/hw1-unit-tests/: CMakeLists.txt  blockchain_tests.cpp
234124/tests/hw1/generators/: compress.py  format.py
cmake/: utils.cmake
cmake-modules/: load_asm.cmake
core_utils/: __init__.py  pdf_utils.py  range_utils.py  scaler_runner.py
engine/: common.py  runner.py  runner2.py  utils.py
gui/: __init__.py  frame.py  hover_preview.py  main.py  thumbnail_panel.py
helpers/: group_theory.sty  homework.sty  probability.sty  proof.sty  symbols.sty
hw1-test-module/: .gitignore  CMakeLists.txt
hw1-unit-tests/: blockchain_tests.cpp
hw1/generators/: common.py  compress.py  format.py  hash.py  verify.py
runner/: CMakeLists.txt  main.cpp
runner/cmake-modules/: json.cmake
runner/include/: TestCase.h  runner.h
runner/modules/: ex3.cpp  ex3.h  ex4.cpp  ex4.h
tests/generators/: common.py  format.py  hash.py
tests/unit-tests/: CMakeLists.txt
tests/unit-tests/cmake/: utils.cmake
